--- a/templates/menu/ingredient_form.html
+++ b/templates/menu/ingredient_form.html
@@ -2,12 +2,12 @@
 {% load crispy_forms_filters %}
 
 {% block content %}
-  <h1 class="text-center" style="color: var(--font-green);">{{ object|yesno:"Edit,Create" }} Ingredient</h1>
-  <form action="" method="post" novalidate style="max-width: 600px; width: 90%;" class="mx-auto form">
+  <h1 class="text-center" style="color: var(--font-green); font-family: var(--font-title);">{{ object|yesno:"Edit,Create" }} Ingredient</h1>
+  <form action="" method="post" novalidate style="max-width: 600px; width: 90%; padding: 25px 0;" class="mx-auto form">
     {% csrf_token %}
     {{ form|crispy }}
     <div class="text-center">
-      <button type="submit" class="btn btn-orange" style="width: 100px;">Submit</button>
+      <button type="submit" class="btn btn-orange" style="width: 100px; margin-top: 25px;">Submit</button>
     </div>
   </form>
 {% endblock %}
