--- a/templates/includes/footer2.html
+++ b/templates/includes/footer2.html
@@ -1,5 +1,5 @@
 {% load static %}
 
 <footer class="d-flex justify-content-center">
-  <img src="{% static 'img/index_footer.png' %}" alt="" height="50px" style="bottom: 0; position: fixed;" class="hidden-in-tablet">
+  <img src="{% static 'img/index_footer.png' %}" alt="" height="50px" style="bottom: 20px; position: fixed;" class="hidden-in-tablet">
 </footer>
