--- a/templates/menu/index.html
+++ b/templates/menu/index.html
@@ -56,5 +56,5 @@
       </div>
     </div>
   </div>
-  {% include 'includes/footer.html' %}
+  {% include 'includes/footer.html' with footer_bottom="0" %}
 {% endblock %}
