--- a/templates/menu/ingredient_confirm_delete.html
+++ b/templates/menu/ingredient_confirm_delete.html
@@ -11,6 +11,6 @@
     {% csrf_token %}
     <button class="btn btn-orange" type="submit" style="margin-top: 15px;">Yes, delete</button>
   </form>
-  {% include 'includes/footer2.html' %}
+  {% include 'includes/footer.html' with footer_bottom="20px" %}
 </div>
 {% endblock %}
